Fix spacing for toogle button

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -100,7 +100,7 @@
 			position: absolute;
 			right: 20px;
 			z-index: 4;
-			top: 8px;
+			top: 5px;
 			.border-radius(3px);
 		}
 	}
@@ -139,6 +139,7 @@
 
 		.navbar .btn-navbar {
 			right: 0;
+			top: 8px;
 		}
 	}
 
